prover-ray/zkcdriver/testdata/synced/invalid/basic_26.zkc
//error:2:24-27:unknown type alias
fn f(w: u64) -> (sign: bit) {
  var suffix:u63
  sign::suffix = w
}
